k8s/key-generator-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: key-generator-consumer
  namespace: rabbitmq-demo
  labels:
    app: key-generator-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: key-generator-consumer
  template:
    metadata:
      labels:
        app: key-generator-consumer
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: key-generator-consumer
        image: harbor.javajon.duckdns.org/jj/key-generator-consumer:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
